# drake_ddp

./: .gitignore  LICENSE  README.md  acrobot.py  allegro_hand.py  block_pusher.py  cart_pole.py  cart_pole_with_wall.py  cart_pole_with_walls.py  ddp.py  gaussian_pendulum.py  hydroelastic_ball_drop.py  ilqr.py  kinova_gen3.py  mcilqr.py  mini_cheetah.py  panda_fr3.py  pendulum.py  pendulum_with_wall.py  pmp_test.py  pontryagin.py  quadruped_trunk_model.py  simple_ball.py  towers_of_hanoi.py  utils_derivs_interpolation.py
cpp/: CMakeLists.txt  README.md
cpp/src/: simple_ball.cpp
models/2f_85_gripper/urdf/: robotiq_2f_85.urdf  robotiq_2f_85_floating.urdf  robotiq_2f_85_static.urdf  robotiq_85_gripper.urdf  robotiq_85_gripper_simple.urdf
models/allegro_hand/: allegro_hand.sdf
models/kinova_gen3/urdf/: GEN3_URDF_V12.urdf
models/mini_cheetah/: mini_cheetah_mesh.urdf
models/panda_fr3/urdf/: panda_fr3.urdf
models/quadruped_trunk/: mini_cheetah.urdf
models/sphere/: sphere.urdf
